update bubble chart

--- a/Happiness.css
+++ b/Happiness.css
@@ -93,3 +93,24 @@ footer {
     background-color: #f9f9f93d;
 }
 
+#myBtn {
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px;
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    background-color: #ff3cb1aa; 
+    color: white; 
+    cursor: pointer; 
+    padding: 10px 20px;
+    border-radius: 4px; 
+    font-size: 18px; 
+  }
+  
+  #myBtn:hover {
+    background-color: #444; 
+  }
+  
+
